--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
     <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
       <img src="w.png">
     </a>
-  </div>
-<div class="footer-text">Rashid Farhad (Kurdor)</div>
+  <p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">Kurdor©</p>
 </body>
 </html>
