--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
     border-radius: 50%;
     transform: scale(1.2);
   }
+  <footer style="
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #111;
+  color: #f1c40f;
+  text-align: center;
+  padding: 10px 20px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 8px 8px 0 0;
+  box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
+  z-index: 999;
+">
+  &copy; 2025 <strong>Kurdor</strong> — Designed by Rashid Farhad Barzani
+</footer>
 </style>
 </head>
 
@@ -109,6 +126,5 @@
     <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
       <img src="w.png">
     </a>
-  <p style="text-align: center; font-size: 85%; margin-top: 10px;" role="footer" id="neo">Kurdor©</p>
 </body>
 </html>
