--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
   /* Disable text selection */
   body {
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none;     /* IE/Edge */
-    user-select: none;         /* Standard */
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     margin: 0;
     padding: 0;
     overflow: hidden; /* 🚫 Disable scrolling */
@@ -83,48 +83,46 @@
     border-radius: 50%;
     transform: scale(1.2);
   }
-  <footer style="
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #111;
-  color: #f1c40f;
-  text-align: center;
-  padding: 10px 20px;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  border-radius: 8px 8px 0 0;
-  box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
-  z-index: 999;
-">
-  &copy; 2025 <strong>Kurdor</strong> — Designed by Rashid Farhad Barzani
-</footer>
+
+  /* Fixed footer style */
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #111;
+    color: #f1c40f;
+    padding: 8px 16px;
+    font-size: 14px;
+    font-family: 'Rabar 021', sans-serif;
+    border-radius: 8px 8px 0 0;
+    box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
+    z-index: 999;
+  }
 </style>
 </head>
 
 <body>
-  <h1> سۆشیال میدیا</h1>
+  <h1>سۆشیال میدیا</h1>
 
   <div class="icons">
     <a href="https://facebook.com" target="_blank" class="facebook">
       <img src="facebook.png">
     </a>
-
     <a href="https://instagram.com" target="_blank" class="instagram">
       <img src="insta.png">
     </a>
-
     <a href="https://tiktok.com" target="_blank" class="tiktok">
       <img src="tiktok.png">
     </a>
-
     <a href="https://snapchat.com" target="_blank" class="snapchat">
       <img src="snap.png">
     </a>
-
     <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
       <img src="w.png">
     </a>
+  </div>
+
+  <footer>Kurdor</footer>
 </body>
 </html>
