--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
 
   /* Fixed footer style */
   footer {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #111;
-    color: #f1c40f;
-    padding: 8px 16px;
-    font-size: 14px;
-    font-family: 'Rabar 021', sans-serif;
-    border-radius: 8px 8px 0 0;
-    box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
-    z-index: 999;
-  }
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #111;
+  color: #f1c40f;
+  padding: 4px 10px; /* smaller background */
+  font-size: 14px;
+  font-family: 'Rabar 021', sans-serif;
+  border-radius: 6px 6px 0 0;
+  box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
+  z-index: 999;
+}
 </style>
 </head>
 
