--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  background: #111;
+  background: none;
   color: #f1c40f;
-  padding: 4px 10px; /* smaller background */
+  padding: 0;
   font-size: 14px;
   font-family: 'Rabar 021', sans-serif;
-  border-radius: 6px 6px 0 0;
-  box-shadow: 0 -2px 8px rgba(0,0,0,0.7);
+  text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 15px #000;
   z-index: 999;
 }
 </style>
