--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
   padding: 0;
   font-size: 14px;
   font-family: 'Rabar 021', sans-serif;
-  text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 15px #000;
+  text-shadow: 
+    0 0 5px #000,
+    0 0 10px #000,
+    0 0 15px #000,
+    0 0 20px #000,
+    0 0 30px #000;
   z-index: 999;
 }
 </style>
