--- a/index.html
+++ b/index.html
@@ -95,13 +95,25 @@
   padding: 0;
   font-size: 14px;
   font-family: 'Rabar 021', sans-serif;
-  text-shadow: 
-    0 0 5px #000,
-    0 0 10px #000,
-    0 0 15px #000,
-    0 0 20px #000,
-    0 0 30px #000;
+  animation: glowPulse 1.5s infinite alternate;
   z-index: 999;
+}
+
+@keyframes glowPulse {
+  0% {
+    text-shadow:
+      2px 2px 4px #000, /* black shadow */
+      0 0 5px #f1c40f,
+      0 0 10px #f1c40f,
+      0 0 20px #f1c40f;
+  }
+  100% {
+    text-shadow:
+      2px 2px 4px #000, /* black shadow */
+      0 0 10px #f1c40f,
+      0 0 20px #f1c40f,
+      0 0 30px #f1c40f;
+  }
 }
 </style>
 </head>
