--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Social Media Links</title>
-
+<script src="typewriter.js"></script>
 <style>
   /* Disable text selection */
   body {
@@ -140,7 +140,12 @@
       <img src="w.png">
     </a>
   </div>
-
+<div id="typewriter" style="
+  font-size: 20px;
+  color: white;
+  font-family: 'Rabar 021', sans-serif;
+  text-align: center;
+"></div>
   <footer>Kurdor</footer>
 </body>
 </html>
