--- a/index.html
+++ b/index.html
@@ -140,11 +140,10 @@
       <img src="w.png">
     </a>
   </div>
-<div id="typewriter" style="
-  font-size: 20px;
-  color: white;
-  font-family: 'Rabar 021', sans-serif;
-  text-align: center;
+<div <!-- typing white box -->
+<div class="white-box" aria-hidden="false">
+  <span id="typewriter"></span><span id="typewriter-cursor" class="tw-cursor">|</span>
+</div>
 "></div>
   <footer>Kurdor</footer>
 </body>
