--- a/index.html
+++ b/index.html
@@ -4,144 +4,39 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Social Media Links</title>
+
+<!-- Link to the external CSS -->
+<link rel="stylesheet" href="style.css">
+
+<!-- Link to the typewriter JS if needed -->
 <script src="typewriter.js"></script>
-<style>
-  /* Disable text selection */
-  body {
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* 🚫 Disable scrolling */
-  }
-
-  @font-face {
-    font-family: 'Rabar 021';
-    src: url('fonts/Rabar_021.ttf') format('truetype');
-  }
-
-  html, body {
-    height: 100%;
-  }
-
-  body {
-    background-image: linear-gradient(to right, #1A2980, #26D0CE);
-    background-size: 400% 400%;
-    animation: gradientMove 10s ease infinite;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Rabar 021', sans-serif;
-    color: cyan;
-    text-align: center;
-  }
-
-  @keyframes gradientMove {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-  }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 40px;
-  }
-
-  .icons {
-    display: flex;
-    gap: 20px;
-  }
-
-  .icons img {
-    width: 35px;
-    height: 35px;
-    object-fit: contain;
-    filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));
-    transition: all 0.3s ease;
-  }
-
-  .icons a {
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    transition: all 0.25s ease;
-  }
-
-  /* Hover colors */
-  .icons a.facebook:hover { background: #1877F2; box-shadow: 0 0 15px #1877F2; }
-  .icons a.instagram:hover { background: #E1306C; box-shadow: 0 0 15px #E1306C; }
-  .icons a.tiktok:hover { background: #e4dddd; box-shadow: 0 0 15px #ffffff; }
-  .icons a.snapchat:hover { background: #FFD700; box-shadow: 0 0 15px #ffffff; }
-  .icons a.whatsapp:hover { background: #25d366; box-shadow: 0 0 15px #25D366; }
-
-  .icons a:hover {
-    border-radius: 50%;
-    transform: scale(1.2);
-  }
-
-  /* Fixed footer style */
-  footer {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  background: none;
-  color: #f1c40f;
-  padding: 0;
-  font-size: 12px;
-  font-family: 'Rabar 021', sans-serif;
-  animation: glowPulse 1.5s infinite alternate;
-  z-index: 999;
-}
-
-@keyframes glowPulse {
-  0% {
-    text-shadow:
-      2px 2px 4px #000,   /* solid black shadow */
-      -2px -2px 4px #000, /* black on the opposite side */
-      0 0 5px #f1c40f,
-      0 0 10px #f1c40f,
-      0 0 20px #f1c40f;
-  }
-  100% {
-    text-shadow:
-      2px 2px 4px #000,
-      -2px -2px 4px #000,
-      0 0 10px #f1c40f,
-      0 0 20px #f1c40f,
-      0 0 30px #f1c40f;
-  }
-}
-</style>
 </head>
 
 <body>
   <h1>سۆشیال میدیا</h1>
 
   <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="facebook">
-      <img src="facebook.png">
+    <a href="https://facebook.com" target="_blank" class="facebook icon">
+      <img src="facebook.png" alt="Facebook">
     </a>
-    <a href="https://instagram.com" target="_blank" class="instagram">
-      <img src="insta.png">
+    <a href="https://instagram.com" target="_blank" class="instagram icon">
+      <img src="insta.png" alt="Instagram">
     </a>
-    <a href="https://tiktok.com" target="_blank" class="tiktok">
-      <img src="tiktok.png">
+    <a href="https://tiktok.com" target="_blank" class="tiktok icon">
+      <img src="tiktok.png" alt="TikTok">
     </a>
-    <a href="https://snapchat.com" target="_blank" class="snapchat">
-      <img src="snap.png">
+    <a href="https://snapchat.com" target="_blank" class="snapchat icon">
+      <img src="snap.png" alt="Snapchat">
     </a>
-    <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
-      <img src="w.png">
+    <a href="https://wa.me/123456789" target="_blank" class="whatsapp icon">
+      <img src="w.png" alt="WhatsApp">
     </a>
   </div>
-  
-</div>
+
+  <!-- Typewriter text (optional) -->
+  <div id="typewriter"></div>
+
+  <!-- Footer -->
   <footer>Kurdor</footer>
 </body>
 </html>
