--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Social Media Links</title>
-
-<!-- Link to the external CSS -->
 <link rel="stylesheet" href="style.css">
-
-<!-- Link to the typewriter JS if needed -->
-<script src="typewriter.js"></script>
 </head>
 
 <body>
@@ -33,10 +28,8 @@
     </a>
   </div>
 
-  <!-- Typewriter text (optional) -->
-  <div id="typewriter"></div>
+  <div class="glow-text">دەست پێکردنی ناوێنەکان</div>
 
-  <!-- Footer -->
   <footer>Kurdor</footer>
 </body>
 </html>
