--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </a>
   </div>
 
-  <div class="glow-text">دەست پێکردنی ناوێنەکان</div>
+  <div id="typewriter" class="clickable-typewriter"></div>
 
   <footer>Kurdor</footer>
 </body>
