--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Social Media Links</title>
+
+<!-- External CSS -->
 <link rel="stylesheet" href="style.css">
+
+<!-- Typewriter JS -->
+<script src="typewriter.js" defer></script>
 </head>
 
 <body>
   <h1>سۆشیال میدیا</h1>
 
+  <!-- Social Icons -->
   <div class="icons">
     <a href="https://facebook.com" target="_blank" class="facebook icon">
       <img src="facebook.png" alt="Facebook">
@@ -28,8 +34,10 @@
     </a>
   </div>
 
+  <!-- Typewriter Text -->
   <div id="typewriter" class="clickable-typewriter"></div>
 
+  <!-- Footer -->
   <footer>Kurdor</footer>
 </body>
 </html>
