--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>Social Media Links</title>
+<title>Kurdor</title>
 
 <!-- External CSS -->
 <link rel="stylesheet" href="style.css">
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-  <h1>سۆشیال میدیا</h1>
-
+  <div class="logo-container">
+  <img src="icon.png" alt="Social Media Icon">
+</div>
   <!-- Social Icons -->
   <div class="icons">
     <a href="https://facebook.com" target="_blank" class="facebook icon">
