--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="logo-container">
-  <img src="icon.png" alt="Social Media Icon">
+  <img src="user.png" alt="Social Media Icon">
 </div>
   <!-- Social Icons -->
   <div class="icons">
