--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <div class="logo-container">
-  <img src="user.png" alt="Social Media Icon">
+ <div class="logo-container">
+  <img src="your-icon.png" alt="Logo">
 </div>
   <!-- Social Icons -->
   <div class="icons">
