--- a/index.html
+++ b/index.html
@@ -4,41 +4,37 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Kurdor</title>
-
-<!-- External CSS -->
 <link rel="stylesheet" href="style.css">
-
-<!-- Typewriter JS -->
 <script src="typewriter.js" defer></script>
 </head>
 
 <body>
- <div class="logo-container">
-  <img src="your-icon.png" alt="Logo">
-</div>
-  <!-- Social Icons -->
-  <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="facebook icon">
-      <img src="facebook.png" alt="Facebook">
-    </a>
-    <a href="https://instagram.com" target="_blank" class="instagram icon">
-      <img src="insta.png" alt="Instagram">
-    </a>
-    <a href="https://tiktok.com" target="_blank" class="tiktok icon">
-      <img src="tiktok.png" alt="TikTok">
-    </a>
-    <a href="https://snapchat.com" target="_blank" class="snapchat icon">
-      <img src="snap.png" alt="Snapchat">
-    </a>
-    <a href="https://wa.me/123456789" target="_blank" class="whatsapp icon">
-      <img src="w.png" alt="WhatsApp">
-    </a>
+  <!-- Logo -->
+  <div class="logo-container">
+    <img src="your-icon.png" alt="Logo">
   </div>
 
   <!-- Typewriter Text -->
- <br/>
-  
-  <div id="typewriter" class="clickable-typewriter"></div>
+  <div id="typewriter"></div>
+
+  <!-- Social Icons -->
+  <div class="icons">
+    <a href="https://facebook.com" target="_blank" class="icon facebook">
+      <img src="facebook.png" alt="Facebook">
+    </a>
+    <a href="https://instagram.com" target="_blank" class="icon instagram">
+      <img src="insta.png" alt="Instagram">
+    </a>
+    <a href="https://tiktok.com" target="_blank" class="icon tiktok">
+      <img src="tiktok.png" alt="TikTok">
+    </a>
+    <a href="https://snapchat.com" target="_blank" class="icon snapchat">
+      <img src="snap.png" alt="Snapchat">
+    </a>
+    <a href="https://wa.me/123456789" target="_blank" class="icon whatsapp">
+      <img src="w.png" alt="WhatsApp">
+    </a>
+  </div>
 
   <!-- Footer -->
   <footer>Kurdor</footer>
