--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-<title>Kurdor</title>
+<title>Social Media Links</title>
 <link rel="stylesheet" href="style.css">
 <script src="typewriter.js" defer></script>
 </head>
@@ -11,30 +11,25 @@
 <body>
   <!-- Logo -->
   <div class="logo-container">
-    <img src="your-icon.png" alt="Logo">
+    <img src="user-logo.png" alt="User Logo">
   </div>
 
-  <!-- Typewriter Text -->
-  <div id="typewriter"></div>
+  <!-- Typewriter 1 -->
+  <div id="typewriter1"></div>
 
   <!-- Social Icons -->
   <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="icon facebook">
-      <img src="facebook.png" alt="Facebook">
-    </a>
-    <a href="https://instagram.com" target="_blank" class="icon instagram">
-      <img src="insta.png" alt="Instagram">
-    </a>
-    <a href="https://tiktok.com" target="_blank" class="icon tiktok">
-      <img src="tiktok.png" alt="TikTok">
-    </a>
-    <a href="https://snapchat.com" target="_blank" class="icon snapchat">
-      <img src="snap.png" alt="Snapchat">
-    </a>
-    <a href="https://wa.me/123456789" target="_blank" class="icon whatsapp">
-      <img src="w.png" alt="WhatsApp">
-    </a>
+    <a href="https://facebook.com" target="_blank" class="icon facebook"><img src="facebook.png" alt="Facebook"></a>
+    <a href="https://instagram.com" target="_blank" class="icon instagram"><img src="insta.png" alt="Instagram"></a>
+    <a href="https://tiktok.com" target="_blank" class="icon tiktok"><img src="tiktok.png" alt="TikTok"></a>
+    <a href="https://snapchat.com" target="_blank" class="icon snapchat"><img src="snap.png" alt="Snapchat"></a>
+    <a href="https://wa.me/123456789" target="_blank" class="icon whatsapp"><img src="w.png" alt="WhatsApp"></a>
   </div>
+
+  <!-- Typewriter 2 with link -->
+  <a id="typewriter2-link" href="https://t.me/rashidfarhad" target="_blank">
+    <div id="typewriter2"></div>
+  </a>
 
   <!-- Footer -->
   <footer>Kurdor</footer>
