--- a/index.html
+++ b/index.html
@@ -4,32 +4,37 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <title>Social Media Links</title>
+
+<!-- Link to the external CSS -->
 <link rel="stylesheet" href="style.css">
-<script src="typewriter.js" defer></script>
+
+<!-- Link to the typewriter JS if needed -->
+<script src="typewriter.js"></script>
 </head>
 
 <body>
-  <!-- Logo -->
-  <div class="logo-container">
-    <img src="user-logo.png" alt="User Logo">
-  </div>
+  <h1>سۆشیال میدیا</h1>
 
-  <!-- Typewriter 1 -->
-  <div id="typewriter1"></div>
-
-  <!-- Social Icons -->
   <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="icon facebook"><img src="facebook.png" alt="Facebook"></a>
-    <a href="https://instagram.com" target="_blank" class="icon instagram"><img src="insta.png" alt="Instagram"></a>
-    <a href="https://tiktok.com" target="_blank" class="icon tiktok"><img src="tiktok.png" alt="TikTok"></a>
-    <a href="https://snapchat.com" target="_blank" class="icon snapchat"><img src="snap.png" alt="Snapchat"></a>
-    <a href="https://wa.me/123456789" target="_blank" class="icon whatsapp"><img src="w.png" alt="WhatsApp"></a>
+    <a href="https://facebook.com" target="_blank" class="facebook icon">
+      <img src="facebook.png" alt="Facebook">
+    </a>
+    <a href="https://instagram.com" target="_blank" class="instagram icon">
+      <img src="insta.png" alt="Instagram">
+    </a>
+    <a href="https://tiktok.com" target="_blank" class="tiktok icon">
+      <img src="tiktok.png" alt="TikTok">
+    </a>
+    <a href="https://snapchat.com" target="_blank" class="snapchat icon">
+      <img src="snap.png" alt="Snapchat">
+    </a>
+    <a href="https://wa.me/123456789" target="_blank" class="whatsapp icon">
+      <img src="w.png" alt="WhatsApp">
+    </a>
   </div>
 
-  <!-- Typewriter 2 with link -->
-  <a id="typewriter2-link" href="https://t.me/rashidfarhad" target="_blank">
-    <div id="typewriter2"></div>
-  </a>
+  <!-- Typewriter text (optional) -->
+  <div id="typewriter"></div>
 
   <!-- Footer -->
   <footer>Kurdor</footer>
