--- a/index.html
+++ b/index.html
@@ -2,112 +2,34 @@
 <html lang="ku">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Social Media Links</title>
-
-<style>
-  /* Disable text selection */
-  body {
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none;     /* IE/Edge */
-    user-select: none;         /* Standard */
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* 🚫 Disable scrolling */
-  }
-
-  @font-face {
-    font-family: 'Rabar 021';
-    src: url('fonts/Rabar_021.ttf') format('truetype');
-  }
-
-  html, body {
-    height: 100%;
-  }
-
-  body {
-    background-image: linear-gradient(to right, #1A2980, #26D0CE);
-    background-size: 400% 400%;
-    animation: gradientMove 10s ease infinite;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Rabar 021', sans-serif;
-    color: cyan;
-    text-align: center;
-  }
-
-  @keyframes gradientMove {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-  }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 40px;
-  }
-
-  .icons {
-    display: flex;
-    gap: 20px;
-  }
-
-  .icons img {
-    width: 35px;
-    height: 35px;
-    object-fit: contain;
-    filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));
-    transition: all 0.3s ease;
-  }
-
-  .icons a {
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    transition: all 0.25s ease;
-  }
-
-  /* Hover colors */
-  .icons a.facebook:hover { background: #1877F2; box-shadow: 0 0 15px #1877F2; }
-  .icons a.instagram:hover { background: #E1306C; box-shadow: 0 0 15px #E1306C; }
-  .icons a.tiktok:hover { background: #e4dddd; box-shadow: 0 0 15px #ffffff; }
-  .icons a.snapchat:hover { background: #FFD700; box-shadow: 0 0 15px #ffffff; }
-  .icons a.whatsapp:hover { background: #25d366; box-shadow: 0 0 15px #25D366; }
-
-  .icons a:hover {
-    border-radius: 50%;
-    transform: scale(1.2);
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1> سۆشیال میدیا</h1>
+  <!-- Fixed logo -->
+  <img src="your-logo.png" alt="Logo" class="fixed-logo">
 
-  <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="facebook">
-      <img src="facebook.png">
+  <div class="social-icons">
+    <a href="https://facebook.com" target="_blank" class="icon facebook">
+      <img src="facebook.png" alt="Facebook">
     </a>
 
-    <a href="https://instagram.com" target="_blank" class="instagram">
-      <img src="insta.png">
+    <a href="https://instagram.com" target="_blank" class="icon instagram">
+      <img src="insta.png" alt="Instagram">
     </a>
 
-    <a href="https://tiktok.com" target="_blank" class="tiktok">
-      <img src="tiktok.png">
+    <a href="https://tiktok.com" target="_blank" class="icon tiktok">
+      <img src="tiktok.png" alt="TikTok">
     </a>
 
-    <a href="https://snapchat.com" target="_blank" class="snapchat">
-      <img src="snap.png">
+    <a href="https://snapchat.com" target="_blank" class="icon snapchat">
+      <img src="snap.png" alt="Snapchat">
     </a>
 
-    <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
-      <img src="w.png">
+    <a href="https://wa.me/123456789" target="_blank" class="icon whatsapp">
+      <img src="w.png" alt="WhatsApp">
     </a>
   </div>
 </body>
