--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
       <img src="w.png">
     </a>
+<br/>
+    <span id="type2"></span>
+    
   </div>
 </body>
 </html>
