--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 
 <body>
-  <h1> سۆشیال میدیا</h1>
+<span id="type1"></span>
 
   <div class="icons">
     <a href="https://facebook.com" target="_blank" class="facebook">
