--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     100% { background-position: 0% 50%; }
   }
 
+  /* Typewriter text style */
+  #type1, #type2 {
+    color: black;
+    text-shadow: 2px 2px 4px white;
+    font-size: 2rem;
+  }
+
   .icons {
     display: flex;
     gap: 20px;
