--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
   <div id="typewriter1"></div>
 <br>
   <div class="icons">
-    <a href="https://facebook.com" target="_blank" class="facebook">
+    <a href="https://www.facebook.com/share/1GQXPmHmdQ/?mibextid=wwXIfr" target="_blank" class="facebook">
    <img src="facebook.png">
     </a>
-    <a href="https://instagram.com" target="_blank" class="instagram">
+    <a href="https://instagram.com/rashidfarhaad" target="_blank" class="instagram">
     <img src="insta.png">
     </a>
-    <a href="https://tiktok.com" target="_blank" class="tiktok">
+    <a href="www.tiktok.com/@rashidfarhaad/" target="_blank" class="tiktok">
       <img src="tiktok.png">
     </a>
-    <a href="https://snapchat.com" target="_blank" class="snapchat">
+    <a href="https://snapchat.com/add/rashid_farhad" target="_blank" class="snapchat">
       <img src="snap.png">
     </a>
     </a>
-    <a href="https://wa.me/123456789" target="_blank" class="whatsapp">
+    <a href="https://wa.me/+7504976736" target="_blank" class="whatsapp">
       <img src="w.png">
     </a>
   </div>
