--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
   <div id="typewriter1"></div>
 <br>
   <div class="icons">
-    <a href="https://www.facebook.com/share/1GQXPmHmdQ/?mibextid=wwXIfr" target="_blank" class="facebook">
-   <img src="facebook.png">
-    </a>
     <a href="https://instagram.com/rashidfarhaad" target="_blank" class="instagram">
     <img src="insta.png">
     </a>
-    <a href="www.tiktok.com/@rashidfarhaad/" target="_blank" class="tiktok">
+    <a href="www.tiktok.com/@rashidfarhaad" target="_blank" class="tiktok">
       <img src="tiktok.png">
     </a>
     <a href="https://snapchat.com/add/rashid_farhad" target="_blank" class="snapchat">
