--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://instagram.com/rashidfarhaad" target="_blank" class="instagram">
     <img src="insta.png">
     </a>
-    <a href="www.tiktok.com/@rashidfarhaad" target="_blank" class="tiktok">
+    <a href="https://www.tiktok.com/@rashidfarhaad" target="_blank" class="tiktok">
       <img src="tiktok.png">
     </a>
     <a href="https://snapchat.com/add/rashid_farhad" target="_blank" class="snapchat">
