--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+<script src="typewriter.js"></script>
 <div class="container">
   <div class="copy-container center-xy">
     <p>
